# GeoGlim

./: .gitignore  CONTRIBUTING.md  GeoGlim_Usage_Example.ipynb  LICENSE  LOCAL_DEVELOPMENT.md  README.md  pyproject.toml  requirements.txt  setup.py  test_api.py  test_glim_only.py
backend/: __init__.py  config.py  main.py  models.py
backend/data/: README.md
backend/services/: __init__.py  clip_service.py
backend/utils/: __init__.py  validation.py
examples/: basic_usage.py
geoglim/: __init__.py  client.py  exceptions.py
tests/: sample_aoi.geojson  test_basic.py
