[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoglim"
version = "1.0.0"
description = "Python package for geological dataset processing with local hosting and spatial clipping"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mohammad Galib", email = "mgalib@purdue.edu"}
]
maintainers = [
    {name = "Mohammad Galib", email = "mgalib@purdue.edu"}
]
keywords = ["geology", "GIS", "spatial", "datasets", "GLiM", "GLHYMPS", "clipping", "FastAPI"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Geology",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "geopandas>=0.13.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "shapely>=2.0.0",
    "pandas>=1.5.0",
    "fiona>=1.8.0",
    "pyproj>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.5.0",
]
extra = [
    "rasterio>=1.3.0",
    "xarray>=2022.3.0",
    "netcdf4>=1.6.0",
    "folium>=0.14.0",
]

[project.scripts]
geoglim-server = "backend.main:main"

[project.urls]
Homepage = "https://github.com/galib9690/GeoGlim"
Documentation = "https://github.com/galib9690/GeoGlim/wiki"
Repository = "https://github.com/galib9690/GeoGlim"
"Bug Reports" = "https://github.com/galib9690/GeoGlim/issues"
Changelog = "https://github.com/galib9690/GeoGlim/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["geoglim", "backend"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yml", "*.yaml", "*.json"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
